revamp: menu with angular

--- a/public/layout.html
+++ b/public/layout.html
@@ -16,7 +16,7 @@
               <a class="brand" href="#">Programa de Recompensas</a>
               <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li class="active"><a href="#"><i class="icon-home"></i></a></li>
+                    <li class="active"><a href="/"><i class="icon-home"></i></a></li>
                     <li><a href="#">Check-in</a></li>
                     <li><a href="#">Check-out</a></li>
                     <li><a href="#">Consultar</a></li>
