--- a/public/layout.html
+++ b/public/layout.html
@@ -20,9 +20,14 @@
       <div id="wrap">
         <div class="navbar navbar-fixed-top navbar-inverse">
           <div class="navbar-inner">
-            <div class="container-fluid">
+            <div class="container">
+              <a class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </a>
               <a class="brand" href="#">Programa de Recompensas</a>
-              <div class="nav-collapse collapse">
+              <div class="nav-collapse navbar-responsive-collapse collapse">
                 <ul class="nav">
                     <li class="active"><a href="/"><i class="icon-home"></i></a></li>
                     <li><a href="#">Check-in</a></li>
@@ -47,10 +52,14 @@
               <button type="submit" class="btn">Procurar</button>
             </fieldset>
           </form>
-          <label>Data:</label>
-          <div id="date"></div>
-          <form class="form-button">
+          <form class="form-button form-horizontal">
+            <div class="control-group">
+            <label>Data:</label>
+            <input id="date" name="date" type="text"/>
+            </div>
+            <div class="control-group">
             <button class="btn btn-primary">Check-in</button>
+            </div>
           </form>
         </div>
         <div id="push"></div>
