--- a/public/layout.html
+++ b/public/layout.html
@@ -48,17 +48,21 @@
           <form class="form-inline">
             <fieldset>
               <legend>Check-in</legend>
+              <div class="control-group error">
               <input type="text" placeholder="Digite o ID…">
               <button type="submit" class="btn">Procurar</button>
+            </div>
             </fieldset>
           </form>
           <form class="form-button form-horizontal">
             <div class="control-group">
             <label>Data:</label>
             <input id="date" name="date" type="text"/>
+
             </div>
             <div class="control-group">
             <button class="btn btn-primary">Check-in</button>
+            <span class="text-error">Não foi possível fazer o checkin</span>
             </div>
           </form>
         </div>
