--- a/public/login.html
+++ b/public/login.html
@@ -7,8 +7,7 @@
     <title>Programa de Recompensas</title>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <link href="/img/icons/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap-responsive.css">
+    <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="/css/layout.css">
     <link rel="stylesheet" href="/css/login.css">
@@ -28,49 +27,46 @@
   </head>
   <body>
     <div id="wrap">
-      <div class="navbar navbar-fixed-top navbar-inverse">
-        <div class="navbar-inner">
-          <div class="container-fluid">
-            <a class="brand" href="#!page=home">Programa de Recompensas</a>
-          </div>
+      <nav class="navbar navbar-fixed-top navbar-inverse">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#!page=home">Programa de Recompensas</a>
         </div>
-      </div>
+      </nav>
       <div class="container">
-
-      <div class="content">
-        <div class="row">
+        <div class="content">
           <div class="login-form">
             <h2>Login</h2>
             <form action="">
               <fieldset>
                 <div class="clearfix">
-                  <input type="text" placeholder="Username">
+                  <input type="text" class="form-control" placeholder="Username">
                 </div>
                 <div class="clearfix">
-                  <input type="password" placeholder="Password">
+                  <input type="password" class="form-control" placeholder="Password">
                 </div>
-                <button class="btn btn-primary" type="submit">Sign in</button>
+                <button class="btn btn-primary" type="submit">Entrar</button>
+                <a href="/esqueci" class="forgot">Esqueceu a senha?</a>
               </fieldset>
             </form>
           </div>
         </div>
       </div>
 
+      <div class="message">
+        <div class="alert alert-danger alert-dismissable">
+          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+          Email ou senha inválida!
+        </div>
       </div>
-      <div id="push"></div>
-    </div>
-    <div id="footer">
-      <div class="container">
-        <p class="muted credit">Programa de Recompensas© 2011-2013&nbsp;–&nbsp;Todos os direitos reservados.</p>
-      </div>
+
     </div>
     <!--Bootstrap-->
-    <script type="text/javascript" src="/lib/bootstrap/js/bootstrap.js"></script>
+    <script type="text/javascript" src="/lib/bootstrap/js/bootstrap.min.js"></script>
     <!--JQuery-->
     <script type="text/javascript" src="/js/jquery.uriAnchor.js"></script>
     <script type="text/javascript" src="/js/jquery.event.gevent.js"></script>
     <script type="text/javascript" src="/js/jquery.event.ue.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="/lib/jquery-maskedinputs/dist/jquery.maskedinput.min.js"></script>
+    <script type="text/javascript" src="/lib/jquery-maskedinputs/js/jquery.maskedinput.min.js"></script>
   </body>
 </html>
