--- a/public/layout.html
+++ b/public/layout.html
@@ -1,78 +1,123 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Test Layout</title>
-        <link rel="stylesheet" type="text/css" href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css">
-        <link rel="stylesheet" type="text/css" href="http://getbootstrap.com/2.3.2/assets/css/bootstrap-responsive.css">
-        <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
-        <link rel="stylesheet" type="text/css" href="./css/layout.css">
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-        <script>
-          $(function() {
-            $("#date").datepicker();
-          });
-        </script>
-    </head>
-    <body>
-      <div id="wrap">
-        <div class="navbar navbar-fixed-top navbar-inverse">
-          <div class="navbar-inner">
-            <div class="container">
-              <a class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </a>
-              <a class="brand" href="#">Programa de Recompensas</a>
-              <div class="nav-collapse navbar-responsive-collapse collapse">
-                <ul class="nav">
-                    <li class="active"><a href="/"><i class="icon-home"></i></a></li>
-                    <li><a href="#">Check-in</a></li>
-                    <li><a href="#">Check-out</a></li>
-                    <li><a href="#">Consultar</a></li>
-                    <li><a href="#">Usuários</a></li>
-                    <li><a href="#">Relatório</a></li>
-                </ul>
-                <ul class="nav pull-right">
-                    <li class="divider-vertical"></li>
-                    <li><p class="navbar-text">Marcus Moyses</p></li>
-                </ul>
-              </div>
-            </div>
-          </div>
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Programa de Recompensas</title>
+    <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+    <link href="/img/icons/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="/css/layout.css">
+    <!--[if lt IE 9]>
+      <script type="text/javascript" src="/lib/html5shiv/js/html5shiv.js"></script>
+    <![endif]-->
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/spa.js"></script>
+    <script type="text/javascript" src="/js/spa.util.js"></script>
+    <script type="text/javascript" src="/js/spa.data.js"></script>
+    <script type="text/javascript" src="/js/spa.fake.js"></script>
+    <script type="text/javascript" src="/js/spa.model.js"></script>
+    <script type="text/javascript" src="/js/spa.shell.js"></script>
+    <script type="text/javascript" src="/js/spa.home.js"></script>
+    <script type="text/javascript" src="/js/spa.checkin.js"></script>
+    <script type="text/javascript" src="/js/spa.checkout.js"></script>
+    <script type="text/javascript" src="/js/spa.user.js"></script>
+  </head>
+  <body>
+    <div id="wrap">
+      <nav class="navbar navbar-fixed-top navbar-inverse">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#!page=home">Programa de Recompensas</a>
         </div>
-        <div class="container main">
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+          <ul class="nav navbar-nav" id="menu">
+            <li class="home">
+              <a href="#!page=home">
+                <span class="glyphicon glyphicon-home"></span>
+              </a>
+            </li>
+            <li class="checkin active">
+              <a href="#!page=checkin">Check-in</a>
+            </li>
+            <li class="checkout">
+              <a href="#!page=checkout">Check-out</a>
+            </li>
+            <li class="consultar">
+              <a href="#!page=consultar">Consultar</a>
+            </li>
+            <li class="usuarios">
+              <a href="#!page=usuarios">Usuários</a>
+            </li>
+            <li class="relatorios">
+              <a href="#!page=relatorios">Relatórios</a>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav pull-right">
+            <li class="divider-vertical"></li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Marcus Moyses<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="/sair">Sair</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div class="container">
+        <div class="consulta">
           <form class="form-inline">
             <fieldset>
-              <legend>Check-in</legend>
-              <div class="control-group error">
-              <input type="text" placeholder="Digite o ID…">
-              <button type="submit" class="btn">Procurar</button>
-            </div>
+              <legend>Consulta</legend>
+              <div class="form-group">
+                <label class="sr-only" for="id">Id do cliente</label>
+                <input type="text" id="id" name="id" class="form-control" placeholder="Digite o ID…">
+              </div>
+              <button type="submit" class="btn btn-default">Procurar</button>
+              <span class="help-block">&nbsp;</span>
             </fieldset>
           </form>
-          <form class="form-button form-horizontal">
-            <div class="control-group">
-            <label>Data:</label>
-            <input id="date" name="date" type="text"/>
-
-            </div>
-            <div class="control-group">
-            <button class="btn btn-primary">Check-in</button>
-            <span class="text-error">Não foi possível fazer o checkin</span>
-            </div>
-          </form>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Data check-in</th>
+                <th>Data check-out</th>
+                <th>Pontos</th>
+              </tr>
+            </thead>
+            <tbody class="tbody">
+              <tr>
+                <td>01/01/2013</td>
+                <td>02/01/2013</td>
+                <td>10</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
-        <div id="push"></div>
       </div>
-      <div id="footer">
-        <div class="container">
-          <p class="muted credit">Programa de Recompensas© 2011–2013 – Todos os direitos reservados.</p>
-        </div>
+      <div id="push"></div>
+    </div>
+    <div id="footer">
+      <div class="container">
+        <p class="muted credit">Programa de Recompensas© 2011-2013&nbsp;–&nbsp;Todos os direitos reservados.</p>
       </div>
-      
-    </body>
+    </div>
+    <!--Bootstrap-->
+    <script type="text/javascript" src="/lib/bootstrap/js/bootstrap.min.js"></script>
+    <!--JQuery-->
+    <script type="text/javascript" src="/js/jquery.uriAnchor.js"></script>
+    <script type="text/javascript" src="/js/jquery.event.gevent.js"></script>
+    <script type="text/javascript" src="/js/jquery.event.ue.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="/lib/jquery-maskedinputs/js/jquery.maskedinput.min.js"></script>
+  </body>
 </html>
