--- a/public/layout.html
+++ b/public/layout.html
@@ -74,34 +74,51 @@
         </div>
       </nav>
       <div class="container">
-        <div class="consulta">
+        <div class="relatorio">
           <form class="form-inline">
             <fieldset>
-              <legend>Consulta</legend>
-              <div class="form-group">
-                <label class="sr-only" for="id">Id do cliente</label>
-                <input type="text" id="id" name="id" class="form-control" placeholder="Digite o ID…">
+              <legend>Relatórios</legend>
+              <div class="form-group col-xs-2 start">
+                <label for="start">Data Início</label>
+                <input type="text" id="start" name="start" class="form-control">
+              </div>
+              <div class="form-group col-xs-2 end">
+                <label for="end">Data Fim</label>
+                <input type="text" id="end" name="end" class="form-control">
               </div>
               <button type="submit" class="btn btn-default">Procurar</button>
               <span class="help-block">&nbsp;</span>
             </fieldset>
           </form>
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th>Data check-in</th>
-                <th>Data check-out</th>
-                <th>Pontos</th>
-              </tr>
-            </thead>
-            <tbody class="tbody">
-              <tr>
-                <td>01/01/2013</td>
-                <td>02/01/2013</td>
-                <td>10</td>
-              </tr>
-            </tbody>
-          </table>
+          <div class="table-responsive">
+            <table class="table table-striped table-condensed">
+              <thead>
+                <tr>
+                  <th>Cliente</th>
+                  <th>Data check-in</th>
+                  <th>Data check-out</th>
+                  <th>R$ Cliente</th>
+                  <th>R$ Programa</th>
+                </tr>
+              </thead>
+              <tbody class="tbody">
+                <tr>
+                  <td>MARCUS MACHADO SAMPAIO MOYSES</td>
+                  <td>01/01/2013</td>
+                  <td>02/01/2013</td>
+                  <td>10,00</td>
+                  <td>20,00</td>
+                </tr>
+              </tbody>
+              <tfoot>
+                <tr class="warning">
+                  <td colspan="3">Total</td>
+                  <td>10,00</td>
+                  <td>20,00</td>
+                </tr>
+              </tfoot>
+            </table>
+          </div>
         </div>
       </div>
       <div id="push"></div>
