--- a/public/layout.html
+++ b/public/layout.html
@@ -14,16 +14,7 @@
       <script type="text/javascript" src="/lib/html5shiv/js/html5shiv.js"></script>
     <![endif]-->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/spa.js"></script>
-    <script type="text/javascript" src="/js/spa.util.js"></script>
-    <script type="text/javascript" src="/js/spa.data.js"></script>
-    <script type="text/javascript" src="/js/spa.fake.js"></script>
-    <script type="text/javascript" src="/js/spa.model.js"></script>
-    <script type="text/javascript" src="/js/spa.shell.js"></script>
-    <script type="text/javascript" src="/js/spa.home.js"></script>
-    <script type="text/javascript" src="/js/spa.checkin.js"></script>
-    <script type="text/javascript" src="/js/spa.checkout.js"></script>
-    <script type="text/javascript" src="/js/spa.user.js"></script>
+    <script type="text/javascript" src="/js/spa.min.js"></script>
   </head>
   <body>
     <div id="wrap">
@@ -118,6 +109,7 @@
                 </tr>
               </tfoot>
             </table>
+            <button class="btn btn-default" id="export">Exportar Relatorio</button>
           </div>
         </div>
       </div>
